--- a/Lesson6.HWSolution/pom.xml
+++ b/Lesson6.HWSolution/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>ru.alishev.springcourse</groupId>
-  <artifactId>FirstDIApp</artifactId>
+  <artifactId>DIAppPart2HWSolution</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
