repeat learning hibernate

--- a/Lesson27.SpringJdbcTemplate/pom.xml
+++ b/Lesson27.SpringJdbcTemplate/pom.xml
@@ -84,6 +84,13 @@
       <artifactId>postgresql</artifactId>
       <version>42.2.18</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
+    <dependency>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>3.11.0</version>
+    </dependency>
   </dependencies>
 
   <build>
