--- a/SpringHibernateApp/src/main/resources/hibernate.properties
+++ b/SpringHibernateApp/src/main/resources/hibernate.properties
@@ -2,7 +2,7 @@
 hibernate.driver_class=org.postgresql.Driver
 hibernate.connection.url=jdbc:postgresql://localhost:5432/hibernate_demo_db
 hibernate.connection.username=postgres
-hibernate.connection.password=postgres
+hibernate.connection.password=postgre
 
 # Конфигурация самого Hibernate
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
