--- a/SpringHibernateApp/pom.xml
+++ b/SpringHibernateApp/pom.xml
@@ -101,6 +101,14 @@
       <artifactId>spring-orm</artifactId>
       <version>${spring.version}</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-jpa</artifactId>
+      <version>3.1.1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
